--- a/data/ukwm.desktop.in
+++ b/data/ukwm.desktop.in
@@ -4,11 +4,11 @@ Name=Ukwm
 Exec=ukwm
 NoDisplay=true
 # name of loadable control center module
-X-GNOME-WMSettingsModule=metacity
+X-UKUI-WMSettingsModule=metacity
 # name we put on the WM spec check window
-X-GNOME-WMName=Ukwm
+X-UKUI-WMName=Ukwm
 # back compat only 
-X-GnomeWMSettingsLibrary=metacity
-X-GNOME-Autostart-Phase=WindowManager
-X-GNOME-Provides=windowmanager
-X-GNOME-Autostart-Notify=true
+X-UkuiWMSettingsLibrary=metacity
+X-UKUI-Autostart-Phase=WindowManager
+X-UKUI-Provides=windowmanager
+X-UKUI-Autostart-Notify=true
