--- a/cogl/cogl-path/ukwm-cogl-path.pc.in
+++ b/cogl/cogl-path/ukwm-cogl-path.pc.in
@@ -8,6 +8,6 @@ requires=@COGL_PKG_REQUIRES@ ukwm-cogl-@LIBUKWM_API_VERSION@
 Name: Cogl
 Description: A 2D path drawing library for Cogl
 Version: @UKWM_VERSION@
-Libs: -L${libdir} -lukwm-cogl-path-@LIBUKWM_API_VERSION@
+Libs: -L${libdir} -lukwm-cogl-path-${apiversion}
 Cflags: -I${includedir}/cogl
 Requires: ${requires}
