Fix building with libglvnd 1.2.0
Signed-off-by: Laurent Carlier <lordheavym@gmail.com>

--- a/cogl/configure.ac
+++ b/cogl/configure.ac
@@ -745,7 +745,7 @@ AS_IF([test "x$NEED_EGL" = "xyes" && test "x$EGL_CHECKED" != "xyes"],
               [],
               [AC_MSG_ERROR([Unable to locate required EGL headers])])
             AC_CHECK_HEADERS(
-              [EGL/eglext.h],
+              [EGL/eglext.h EGL/eglmesaext.h],
               [],
               [AC_MSG_ERROR([Unable to locate required EGL headers])],
               [#include <EGL/egl.h>])
@@ -759,7 +759,8 @@ AS_IF([test "x$NEED_EGL" = "xyes" && test "x$EGL_CHECKED" != "xyes"],
           )
 
         COGL_EGL_INCLUDES="#include <EGL/egl.h>
-#include <EGL/eglext.h>"
+#include <EGL/eglext.h>
+#include <EGL/eglmesaext.h>"
         AC_SUBST([COGL_EGL_INCLUDES])
       ])
 
