Use secure URI in Homepage field.
Fixes: lintian: homepage-field-uses-insecure-uri
See-also: https://lintian.debian.org/tags/homepage-field-uses-insecure-uri.html

--- a/debian/control
+++ b/debian/control
@@ -54,7 +54,7 @@ Build-Depends: debhelper-compat (= 12),
                xauth <!nocheck>
 Standards-Version: 4.5.0
 Rules-Requires-Root: no
-Homepage: http://www.ukui.org
+Homepage: https://www.ukui.org
 Vcs-Git: https://github.com/ukui/ukwm.git
 Vcs-Browser: https://github.com/ukui/ukwm
 
