Avoid explicitly specifying -Wl,--as-needed linker flag.
Changes-By: lintian-brush
Fixes: lintian: debian-rules-uses-as-needed-linker-flag
See-also: https://lintian.debian.org/tags/debian-rules-uses-as-needed-linker-flag.html

--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 
-export DEB_LDFLAGS_MAINT_APPEND = -Wl,-O1 -Wl,--as-needed
+export DEB_LDFLAGS_MAINT_APPEND = -Wl,-O1
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
 ifneq (,$(findstring $(DEB_HOST_ARCH),"s390x"))
