--- a/debian/control
+++ b/debian/control
@@ -3,55 +3,56 @@ Section: x11
 Priority: optional
 Maintainer: Kylin Team <team+kylin@tracker.debian.org>
 Uploaders: handsome_feng <jianfengli@ubuntukylin.com>
-Build-Depends: dpkg-dev (>= 1.22.5), debhelper-compat (= 12),
+Build-Depends: debhelper-compat (= 12),
                dh-sequence-gir,
+               dpkg-dev (>= 1.22.5),
                gnome-pkg-tools (>= 0.10),
-               gtk-doc-tools (>= 1.15),
-               libgtk-3-dev (>= 3.19.8),
-               libglib2.0-dev (>= 2.53.2),
-               libcanberra-gtk3-dev,
                gobject-introspection (>= 1.41.3),
                gsettings-desktop-schemas-dev (>= 3.21.4),
-               libgirepository1.0-dev (>= 0.9.12),
-               libjson-glib-dev (>= 0.13.2-1~),
-               libgbm-dev (>= 10.3),
-               libpango1.0-dev (>= 1.2.0),
+               gtk-doc-tools (>= 1.15),
                libcairo2-dev (>= 1.10.0),
-               libgl1-mesa-dev (>= 7.1~rc3-1~),
+               libcanberra-gtk3-dev,
                libdrm-dev [!hurd-any],
                libegl1-mesa-dev,
+               libgbm-dev (>= 10.3),
+               libgirepository1.0-dev (>= 0.9.12),
+               libgl1-mesa-dev (>= 7.1~rc3-1~),
+               libglib2.0-dev (>= 2.53.2),
                libgnome-desktop-3-dev (>= 3.21.2),
+               libgtk-3-dev (>= 3.19.8),
                libgudev-1.0-dev (>= 232) [linux-any],
+               libice-dev,
                libinput-dev [linux-any],
+               libjson-glib-dev (>= 0.13.2-1~),
+               libpam0g-dev,
+               libpango1.0-dev (>= 1.2.0),
+               libsm-dev,
                libstartup-notification0-dev (>= 0.7),
                libsystemd-dev (>= 212) [linux-any],
                libupower-glib-dev (>= 0.99.0),
                libwacom-dev (>= 0.13) [linux-any],
+               libwayland-dev (>= 1.13.0) [linux-any],
+               libx11-dev,
+               libx11-xcb-dev,
                libxcb-randr0-dev,
                libxcb-res0-dev,
                libxcomposite-dev (>= 1:0.2),
-               libxi-dev (>= 2:1.6.0),
-               libxkbfile-dev,
-               libxkbcommon-x11-dev,
-               libxkbcommon-dev (>= 0.4.3),
-               libx11-xcb-dev,
-               libxfixes-dev,
-               libxdamage-dev,
                libxcursor-dev,
-               libxt-dev,
-               libx11-dev,
-               libxinerama-dev,
+               libxdamage-dev,
                libxext-dev,
+               libxfixes-dev,
+               libxi-dev (>= 2:1.6.0),
+               libxinerama-dev,
+               libxkbcommon-dev (>= 0.4.3),
+               libxkbcommon-x11-dev,
+               libxkbfile-dev,
                libxrandr-dev,
                libxrender-dev,
-               libsm-dev,
-               libice-dev,
-               libpam0g-dev,
-               libwayland-dev (>= 1.13.0) [linux-any],
+               libxt-dev,
                wayland-protocols (>= 1.9) [linux-any],
+               xauth <!nocheck>,
                xkb-data,
-               xvfb <!nocheck>,
-               xauth <!nocheck>
+               xvfb <!nocheck>
 Standards-Version: 4.5.0
 Rules-Requires-Root: no
 Homepage: http://www.ukui.org
@@ -60,16 +61,15 @@ Vcs-Browser: https://github.com/ukui/ukwm
 
 Package: ukwm
 Architecture: any
-Depends: ${shlibs:Depends},
-         ${misc:Depends},
-         ukwm-common (>= ${source:Version}),
+Depends: gsettings-desktop-schemas (>= 3.21.4),
          ukui-settings-daemon,
-         gsettings-desktop-schemas (>= 3.21.4),
-         zenity
+         ukwm-common (>= ${source:Version}),
+         zenity,
+         ${misc:Depends},
+         ${shlibs:Depends}
 Provides: x-window-manager
 Recommends: ukui-window-switch
-Suggests: ukui-control-center,
-          xdg-user-dirs,
+Suggests: ukui-control-center, xdg-user-dirs
 Description: lightweight GTK+ window manager
  Ukwm is a small window manager, using GTK+ and Clutter to do
  everything.
@@ -89,10 +89,10 @@ Section: libs
 Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends},
+Depends: gsettings-desktop-schemas (>= 3.15.92),
+         ukwm-common (>= ${source:Version}),
          ${misc:Depends},
-         gsettings-desktop-schemas (>= 3.15.92),
-         ukwm-common (>= ${source:Version})
+         ${shlibs:Depends}
 Description: window manager library from the Ukwm window manager
  Ukwm is a small window manager, using GTK+ and Clutter to do
  everything.
@@ -125,30 +125,30 @@ Package: libukwm-1-dev
 Section: libdevel
 Architecture: any
 Multi-Arch: same
-Depends: ${misc:Depends},
-         libukwm-1-0t64 (= ${binary:Version}),
-         gir1.2-ukwm-1 (= ${binary:Version}),
+Depends: gir1.2-ukwm-1 (= ${binary:Version}),
          gsettings-desktop-schemas-dev,
-         libgtk-3-dev,
-         libcairo2-dev,
-         libglib2.0-dev,
          libatk1.0-dev,
-         libpango1.0-dev,
-         libjson-glib-dev,
-         libegl1-mesa-dev,
-         libwayland-dev,
+         libcairo2-dev,
          libdrm-dev,
+         libegl1-mesa-dev,
          libgbm-dev,
-         libinput-dev (>= 1.4),
-         libudev-dev,
-         libx11-dev,
-         libxext-dev,
-         libxdamage-dev,
-         libxcomposite-dev,
-         libxi-dev,
          libgdk-pixbuf-2.0-dev | libgdk-pixbuf2.0-dev,
+         libglib2.0-dev,
+         libgtk-3-dev,
+         libinput-dev (>= 1.4),
+         libjson-glib-dev,
+         libpango1.0-dev,
+         libudev-dev,
+         libukwm-1-0t64 (= ${binary:Version}),
+         libwayland-dev,
+         libx11-dev,
+         libxcomposite-dev,
+         libxdamage-dev,
+         libxext-dev,
          libxfixes-dev,
-         libxrandr-dev
+         libxi-dev,
+         libxrandr-dev,
+         ${misc:Depends}
 Conflicts: libukwm-0-dev
 Description: Development files for the Ukwm window manager
  Ukwm is a small window manager, using GTK+ and Clutter to do
@@ -165,10 +165,10 @@ Package: gir1.2-ukwm-1
 Section: introspection
 Architecture: any
 Multi-Arch: same
-Depends: ${gir:Depends},
-         ${shlibs:Depends},
+Depends: libukwm-1-0t64 (= ${binary:Version}),
+         ${gir:Depends},
          ${misc:Depends},
-         libukwm-1-0t64 (= ${binary:Version})
+         ${shlibs:Depends}
 Breaks: gnome-shell (<< 3.13.92~)
 Description: GObject introspection data for Ukwm
  Ukwm is a small window manager, using GTK+ and Clutter to do
